Bug 313380 - systray "new message in" popup shows also folders which kmail should not act on
Summary: systray "new message in" popup shows also folders which kmail should not act on
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.97 RC2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-16 21:31 UTC by Martin Koller
Modified: 2013-01-18 06:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2013-01-16 21:31:18 UTC
I have a lot of folders, but all of them are set to "do NOT act on unread/new messages". I only want to see the systray icon when I have a new message in some special folders, which works as configured, e.g. currently I see the systray icon with the number "1" in it. But when I now right-click on the icon and select "New messages In", the sub-popup shows ALL folders with new messages in them (e.g. also all my mailing list folders) and not only the folder which is counted for the number in the systray icon.

In kmail 1 I could very quickly see in what folder this new message is in, but now I can no longer use this in any useful way as I get much too much folders in the popup.

Please restore the behaviour of kmail1 and only show those folders in the popup which I selected to be counted in the systray.

Reproducible: Always
Comment 1 Laurent Montel 2013-01-18 06:54:16 UTC
Git commit 33a313228acb860ee6121343b251846839cf856c by Montel Laurent.
Committed on 18/01/2013 at 07:53.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 313380 - systray "new message in" popup shows also folders which

kmail should not act on

FIXED-IN: 4.10

M  +2    -0    kmail/kmsystemtray.cpp

http://commits.kde.org/kdepim/33a313228acb860ee6121343b251846839cf856c