Fix Bug 313380 - systray "new message in" popup shows also folders which

kmail should not act on

FIXED-IN: 4.10
BUG: 313380